[gd_scene load_steps=6 format=3 uid="uid://myyqgr6phk4m"]

[ext_resource type="Script" uid="uid://bt5m4poyfivvw" path="res://stats.gd" id="1_74t8q"]
[ext_resource type="FontFile" uid="uid://d3xret8asdeg6" path="res://fonts/Xolonium-Regular.ttf" id="2_adv4l"]

[sub_resource type="InputEventAction" id="InputEventAction_qo8cm"]
action = &"pause"

[sub_resource type="InputEventAction" id="InputEventAction_xwvqn"]
action = &"controller_back"

[sub_resource type="Shortcut" id="Shortcut_xwvqn"]
events = [SubResource("InputEventAction_qo8cm"), SubResource("InputEventAction_xwvqn")]

[node name="Stats" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_74t8q")

[node name="StatsLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 125.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_adv4l")
theme_override_font_sizes/font_size = 72
text = "Stats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -582.5
offset_top = 75.0
offset_right = -182.5
offset_bottom = 200.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_adv4l")
theme_override_font_sizes/font_size = 72
text = "Best"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestTimeLabel" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 57.5
offset_top = -180.0
offset_right = 457.5
offset_bottom = -105.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_adv4l")
theme_override_font_sizes/font_size = 50
text = "Time: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestScoreLabel" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 57.5
offset_top = -110.0
offset_right = 457.5
offset_bottom = -35.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_adv4l")
theme_override_font_sizes/font_size = 50
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestStageLabel" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 57.5
offset_top = -40.0
offset_right = 457.5
offset_bottom = 35.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_adv4l")
theme_override_font_sizes/font_size = 50
text = "Stage: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 182.5
offset_top = 75.0
offset_right = 582.5
offset_bottom = 200.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_adv4l")
theme_override_font_sizes/font_size = 72
text = "Total"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalKillsLabel" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 822.5
offset_top = -180.0
offset_right = 1222.5
offset_bottom = -105.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_adv4l")
theme_override_font_sizes/font_size = 50
text = "Kills: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalItemsLabel" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 822.5
offset_top = -110.0
offset_right = 1222.5
offset_bottom = -35.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_adv4l")
theme_override_font_sizes/font_size = 50
text = "Items: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalBossesLabel" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 822.5
offset_top = -40.0
offset_right = 1222.5
offset_bottom = 35.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_adv4l")
theme_override_font_sizes/font_size = 50
text = "Bosses: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalDashesLabel" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 822.5
offset_top = 30.0
offset_right = 1222.5
offset_bottom = 105.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_adv4l")
theme_override_font_sizes/font_size = 50
text = "Dashes: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalUltsLabel" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 822.5
offset_top = 100.0
offset_right = 1222.5
offset_bottom = 175.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_adv4l")
theme_override_font_sizes/font_size = 50
text = "Ultimates: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -120.0
offset_right = 125.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_adv4l")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_xwvqn")
text = "Back"

[node name="ResetButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -507.5
offset_top = -120.0
offset_right = -257.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_adv4l")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_xwvqn")
text = "Reset"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
